--- a/package.json
+++ b/package.json
@@ -1,6 +1,9 @@
 {
   "name": "sumato",
   "private": true,
+  "scripts": {
+    "start": "node server.js"
+  },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.0.0",
     "@rails/actioncable": "^6.0.0",
