--- a/config/database.yml
+++ b/config/database.yml
@@ -11,6 +11,7 @@ default: &default
 
 development:
   <<: *default
+  secret_key_base: ENV['RAILS_MASTER_KEY']
   database: dbbb/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
@@ -18,9 +19,11 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
+  secret_key_base: ENV['RAILS_MASTER_KEY']
   database: dbbb/test.sqlite3
 
 production:
   adapter: postgresql
+  secret_key_base: <%= ENV['RAILS_MASTER_KEY'] %>
   database: <%= ENV['DATABASE_URL'] %>
 
